# nyx-utils

./: CMakeLists.txt  README.md
doc/: nyx_cmd.doxy.in
files/launch/: nyx-utils.conf.in  nyx-utils.in  nyx-utils.service.in
include/internal/nyx-cmd/: nyx_cmd_command.h  nyx_cmd_devicetype.h  nyx_cmd_output.h  nyx_cmd_output_json.h  nyx_cmd_output_shell.h  nyx_cmd_query_command.h
nyx-cmd/: CMakeLists.txt  main.cpp  nyx_cmd_command.cpp  nyx_cmd_devicetype.cpp  nyx_cmd_output.cpp  nyx_cmd_output_json.cpp  nyx_cmd_output_shell.cpp  nyx_cmd_query_command.cpp
nyx-cmd-modules/: CMakeLists.txt
nyx-cmd-modules/battery/: CMakeLists.txt  nyx_cmd_battery.cpp  nyx_cmd_battery.h  nyx_cmd_battery_read.cpp  nyx_cmd_battery_read.h  nyx_cmd_battery_register_status.cpp  nyx_cmd_battery_register_status.h
nyx-cmd-modules/charger/: CMakeLists.txt  nyx_cmd_charger.cpp  nyx_cmd_charger.h  nyx_cmd_charger_query.cpp  nyx_cmd_charger_query.h  nyx_cmd_charger_register.cpp  nyx_cmd_charger_register.h
nyx-cmd-modules/device_info/: CMakeLists.txt  nyx_cmd_device_info.cpp  nyx_cmd_device_info.h  nyx_cmd_device_info_query.cpp  nyx_cmd_device_info_query.h
nyx-cmd-modules/gps/: CMakeLists.txt  nyx_cmd_gps.cpp  nyx_cmd_gps.h  nyx_cmd_gps_enable_mock.cpp  nyx_cmd_gps_enable_mock.h  nyx_cmd_gps_providers_query.cpp  nyx_cmd_gps_providers_query.h  nyx_cmd_gps_set_mock_latency.cpp  nyx_cmd_gps_set_mock_latency.h
nyx-cmd-modules/keys/: CMakeLists.txt  nyx_cmd_keys.cpp  nyx_cmd_keys.h  nyx_cmd_keys_events.cpp  nyx_cmd_keys_events.h
nyx-cmd-modules/led/: CMakeLists.txt  nyx_cmd_led.cpp  nyx_cmd_led.h  nyx_cmd_led_get_brightness.cpp  nyx_cmd_led_get_brightness.h  nyx_cmd_led_set_brightness.cpp  nyx_cmd_led_set_brightness.h  nyx_cmd_led_set_mode.cpp  nyx_cmd_led_set_mode.h
nyx-cmd-modules/os_info/: CMakeLists.txt  nyx_cmd_os_info.cpp  nyx_cmd_os_info.h  nyx_cmd_os_info_query.cpp  nyx_cmd_os_info_query.h
nyx-cmd-modules/system/: CMakeLists.txt  nyx_cmd_system.cpp  nyx_cmd_system.h  nyx_cmd_system_erase.cpp  nyx_cmd_system_erase.h  nyx_cmd_system_query_alarm.cpp  nyx_cmd_system_query_alarm.h  nyx_cmd_system_query_time.cpp  nyx_cmd_system_query_time.h  nyx_cmd_system_reboot.cpp  nyx_cmd_system_reboot.h  nyx_cmd_system_set_alarm.cpp  nyx_cmd_system_set_alarm.h  nyx_cmd_system_shutdown.cpp  nyx_cmd_system_shutdown.h  nyx_cmd_system_suspend.cpp  nyx_cmd_system_suspend.h
nyx-cmd-modules/touchpanel/: CMakeLists.txt  nyx_cmd_touchpanel.cpp  nyx_cmd_touchpanel.h  nyx_cmd_touchpanel_get_active_scan_rate.cpp  nyx_cmd_touchpanel_get_active_scan_rate.h  nyx_cmd_touchpanel_get_event.cpp  nyx_cmd_touchpanel_get_event.h  nyx_cmd_touchpanel_get_mode.cpp  nyx_cmd_touchpanel_get_mode.h  nyx_cmd_touchpanel_set_active_scan_rate.cpp  nyx_cmd_touchpanel_set_active_scan_rate.h  nyx_cmd_touchpanel_set_mode.cpp  nyx_cmd_touchpanel_set_mode.h
